samples/_failures_safe/1761215754_019854_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa82e24e.c: In function ‘main’:
./samples/SAFE/__tmp_fa82e24e.c:162:16: error: missing terminating " character
  162 |         printf("Decompression verified
      |                ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fa82e24e.c:162:9: error: expected expression at end of input
  162 |         printf("Decompression verified
      |         ^~~~~~
./samples/SAFE/__tmp_fa82e24e.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fa82e24e.c:162:9: error: expected declaration or statement at end of input
